--- a/src/styles/1999.styl
+++ b/src/styles/1999.styl
@@ -7,6 +7,7 @@
 
 /* Components */
 @import "components/icon_button.styl";
+@import "components/sliders.styl";
 
 /* Sections */
 @import "sections/page_wrapper.styl";
