--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -11,7 +11,20 @@ h2 Services
         p.
           Elevate and promote your brand with video ads. We specialize in crafting a moment within its own world, a memorable experience that will resonate with your target audience. From concept development and video production and editing, we ensure your message is delivered effectively and memorably.
       .feature_media
-        img(src='/assets/images/portfolio/open-studios-dsc-2483-darker.jpg' style=' width: 100%; height: 350px; object-fit: cover;' alt='Screenshot of a jewellery commercial for Garrett Ray Jewellery')
+        #my-keen-slider.keen-slider
+          .keen-slider__slide.number-slide1 1
+          .keen-slider__slide.number-slide2 2
+          .keen-slider__slide.number-slide3 3
+          .keen-slider__slide.number-slide4 4
+          .keen-slider__slide.number-slide5 5
+          .keen-slider__slide.number-slide6 6
+        #thumbnails.keen-slider.thumbnail
+          .keen-slider__slide.number-slide1 1
+          .keen-slider__slide.number-slide2 2
+          .keen-slider__slide.number-slide3 3
+          .keen-slider__slide.number-slide4 4
+          .keen-slider__slide.number-slide5 5
+          .keen-slider__slide.number-slide6 6
   .row.center
     .feature.wide
       .feature_media
@@ -96,10 +109,10 @@ h2 Services
             img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
       .tile
         .tile_content.vertical
-            img.tile_img(alt='Media Wiki logo' src='/assets/images/platforms/mediawiki.png' style='filter: invert()')
-            .tile_innercontent
-              h3 Media Wiki
-              p The system powering Wikipedia. Our MediaWiki solutions are customised to your specifications and branding. Facilitating a hub to collaborate in a structured way, empowering users with advanced editing features unlocking new efficiencies within your organisation.
+          img.tile_img(alt='Media Wiki logo' src='/assets/images/platforms/mediawiki.png' style='filter: invert()')
+          .tile_innercontent
+            h3 Media Wiki
+            p The system powering Wikipedia. Our MediaWiki solutions are customised to your specifications and branding. Facilitating a hub to collaborate in a structured way, empowering users with advanced editing features unlocking new efficiencies within your organisation.
         .tokens
           .token
             h4 Customisation
@@ -112,10 +125,10 @@ h2 Services
             img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
       .tile
         .tile_content.horizontal
-            .tile_innercontent
-              h3 Moodle LMS
-              p Need a learning management system (LMS)? Our team can design a Moodle system that meets your business goals and legislative obligations. Used by higher education, major corporations and governments around the world as their main learning management system.
-            img.tile_img(alt='Moodle logo' src='/assets/images/platforms/moodle.png')
+          .tile_innercontent
+            h3 Moodle LMS
+            p Need a learning management system (LMS)? Our team can design a Moodle system that meets your business goals and legislative obligations. Used by higher education, major corporations and governments around the world as their main learning management system.
+          img.tile_img(alt='Moodle logo' src='/assets/images/platforms/moodle.png')
         .tokens
           .token
             h4 Countries
@@ -144,10 +157,10 @@ h2 Services
             img(width="32" height="32" src='/assets/check.svg' alt='Check icon')
       .tile
         .tile_content.horizontal
-            .tile_innercontent
-              h3 Node.JS Applications
-              p Our team uses the widely popular Node.JS framework to build advanced web applications and custom integration middleware. Automate data exchange between your systems, stream data to the browser to connect users in immersive online game worlds and much more.
-            img.tile_img(alt='Node.js logo' src='/assets/images/platforms/nodejs.png')
+          .tile_innercontent
+            h3 Node.JS Applications
+            p Our team uses the widely popular Node.JS framework to build advanced web applications and custom integration middleware. Automate data exchange between your systems, stream data to the browser to connect users in immersive online game worlds and much more.
+          img.tile_img(alt='Node.js logo' src='/assets/images/platforms/nodejs.png')
         .tokens
           .token
             h4 Developers
@@ -235,3 +248,49 @@ h2 Services
         h4 Business Operations
         p
           | We have a robust documentation system that ensures nothing is lost. Using Office and Dropbox our organized and structured files keep our production team equipped and informed for maximum efficiency to meet your goals.
+script.
+  window.addEventListener("load", function() {
+    function ThumbnailPlugin(main) {
+      return (slider) => {
+        function removeActive() {
+          slider.slides.forEach((slide) => {
+            slide.classList.remove("active")
+          })
+        }
+        function addActive(idx) {
+          slider.slides[idx].classList.add("active")
+        }
+
+        function addClickEvents() {
+          slider.slides.forEach((slide, idx) => {
+            slide.addEventListener("click", () => {
+              main.moveToIdx(idx)
+            })
+          })
+        }
+
+        slider.on("created", () => {
+          addActive(slider.track.details.rel)
+          addClickEvents()
+          main.on("animationStarted", (main) => {
+            removeActive()
+            const next = main.animator.targetIdx || 0
+            addActive(main.track.absToRel(next))
+            slider.moveToIdx(Math.min(slider.track.details.maxIdx, next))
+          })
+        })
+      }
+    }
+    var slider = new KeenSlider("#my-keen-slider");
+    var thumbnails = new KeenSlider(
+      "#thumbnails",
+      {
+        initial: 0,
+        slides: {
+          perView: 4,
+          spacing: 10,
+        },
+      },
+      [ThumbnailPlugin(slider)]
+    );
+  })
