--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -123,6 +123,7 @@ a.icon_button img:hover {
   font-weight: 500;
   height: 250px;
   max-height: 100vh;
+  border-radius: 0.5rem;
 }
 .number-slide1 {
   background: #40afff;
@@ -149,17 +150,24 @@ a.icon_button img:hover {
   background: #404cff;
   background: linear-gradient(128deg, #404cff 0%, #ae3fff 100%);
 }
+.keen-slider.thumbnail {
+  margin-top: 10px;
+  padding: 1.5px;
+}
 .thumbnail .keen-slider__slide {
   border-radius: 0.5rem;
   font-size: 30px;
-  margin-top: 10px;
   height: 100px;
 }
 .thumbnail .keen-slider__slide {
   cursor: pointer;
 }
+.thumbnail .keen-slider__slide:hover {
+  box-shadow: #ff69cb 0px 0px 5px;
+}
 .thumbnail .keen-slider__slide.active {
-  border: 2px dashed #ff69cb;
+  outline: 2px dotted #ff69cb;
+  outline-offset: -2px;
 }
 /* Sections */
 #page-wrapper {
@@ -441,13 +449,19 @@ a.icon_button img:hover {
 .content .feature.wide {
   padding: 1rem;
   min-width: 0;
+  justify-content: space-between;
 }
 .content .feature.wide .feature_content {
   padding: 1rem;
   max-width: calc(45% - 2rem);
 }
 .content .feature.wide .feature_media {
-  max-width: calc(55% - 2rem);
+  max-width: calc(55% - 4rem);
+}
+.content .feature.wide .feature_media img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 @media screen and (min-width: 768px) {
   .content .tiles {
@@ -475,6 +489,9 @@ a.icon_button img:hover {
     margin: inherit;
     width: 100%;
     height: auto;
+  }
+  .content .feature.wide .feature_media img {
+    border-radius: 0rem;
   }
   .content .tiles .tile {
     flex-basis: calc(49% - 3rem);
