--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -76,6 +76,9 @@ form button:hover {
   background: #09a;
   cursor: pointer;
 }
+.hide-overflow {
+  overflow: hidden;
+}
 @font-face {
   font-family: SourceSans;
   src: url("/assets/fonts/SourceSans3-Light.woff");
@@ -167,7 +170,20 @@ a.icon_button img:hover {
 }
 .thumbnail .keen-slider__slide.active {
   outline: 2px dotted #ff69cb;
-  outline-offset: -2px;
+  outline-offset: -3px;
+}
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+}
+.video-container iframe {
+  border-radius: 0.5rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 /* Sections */
 #page-wrapper {
@@ -315,7 +331,6 @@ a.icon_button img:hover {
   flex-direction: column;
   flex-basis: 100%;
   justify-content: space-between;
-  overflow: hidden;
 }
 .content_row .content.portfolio .column {
   margin-bottom: 2.5rem;
