--- a/src/styles/components/sliders.styl
+++ b/src/styles/components/sliders.styl
@@ -91,5 +91,19 @@
 }
 .thumbnail .keen-slider__slide.active {
   outline: 2px dotted #ff69cb;
-  outline-offset: -2px;
+  outline-offset: -3px;
+}
+
+.video-container {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	height: 0;
+}
+.video-container iframe {
+  border-radius: 0.5rem;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
