--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -37,19 +37,27 @@ h2 Services
     .feature.wide
       .feature_media#animation
         .keen-slider.main
-          .keen-slider__slide.number-slide1 1
-          .keen-slider__slide.number-slide2 2
-          .keen-slider__slide.number-slide3 3
-          .keen-slider__slide.number-slide4 4
-          .keen-slider__slide.number-slide5 5
-          .keen-slider__slide.number-slide6 6
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="250" src="https://www.youtube.com/embed/VUzLwHIt_vM?si=fE9-tejOk9xSWaq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="250" src="https://www.youtube.com/embed/15C2EbSeVkA?si=bs9T-C8H9pypHpJz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="250" src="https://www.youtube.com/embed/NbeGne8o3S4?si=tFxcewlt0lOhKLyv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="250" src="https://www.youtube.com/embed/4QFwC1ASBC0?si=mHIlmhGdw4sTFPNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         .keen-slider.thumbnail
-          .keen-slider__slide.number-slide1 1
-          .keen-slider__slide.number-slide2 2
-          .keen-slider__slide.number-slide3 3
-          .keen-slider__slide.number-slide4 4
-          .keen-slider__slide.number-slide5 5
-          .keen-slider__slide.number-slide6 6
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/VUzLwHIt_vM/maxresdefault.jpg')
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/15C2EbSeVkA/maxresdefault.jpg')
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/NbeGne8o3S4/maxresdefault.jpg')
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/4QFwC1ASBC0/maxresdefault.jpg')
       .feature_content
         h3 Animation
         p
@@ -312,7 +320,7 @@ script.
           {
             initial: 0,
             slides: {
-              perView: 4,
+              perView: 5,
               spacing: 10,
             },
             renderMode: 'performance'
