#45 - Adding draft of May blog post

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,19 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024')
+        img(src='/assets/blog/2024/05/opal-banner.webp' style='width: 100%; height: auto; min-height: 269px; object-fit: cover;' alt='A close up photo of the surface of an Opal')
+    .column
+      a(href='/blog/2024/05/studio-roundup-may-2024.html')
+        h3 Studio Roundup for May 2024
+      p.
+        Opals. Game Dev. Marketing.
+      p
+        | Read our 
+        a(href='/blog/2024/05/studio-roundup-may-2024.html') retrospective for May 2024
+        | !
+  .row
+    .column
       a(href='/blog/2024/04/studio-roundup-april-2024.html' target='_blank' title='Studio Roundup for April 2024')
         img(src='/assets/blog/2024/04/emerald-pendant.jpg' style=' width: 100%; height: auto;' alt='A photo of necklace featuring an emerald pendant, set in 18k gold')
     .column
