#45 - May blog post and homepage update

--- a/src/content/home.pug
+++ b/src/content/home.pug
@@ -11,12 +11,32 @@ h2 Welcome!
           | We want you to feel like you&apos;ve walked into a real office where we do our work.
         a(href='/case_studies.html' style='float: right') See case study
     .column
-      h3(style='margin-top: 0') Our work
-      img(src='/assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
-      img(src='/assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Winter watercolour painting featuring Yule solid gold ring.')
-      img(src='/assets/images/portfolio/open-studios-character-design.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Composition of 3D character in a 2D background for the Kamigen comic')
-      img(src='/assets/images/portfolio/open-studios-kamigen.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Screenshot of the animated intro sequence from Kamigen')
-      a(href='/portfolio.html' style='float: right') View portfolio
+      h3(style='margin-top: 0') Recent updates
+      a(href='/blog/2024/05/studio-roundup-may-2024.html' target='_blank' title='Studio Roundup for May 2024')
+        img(src='/assets/blog/2024/05/opal-banner.webp' style='width: 100%; height: auto; min-height: 269px; object-fit: cover;' alt='A close up photo of the surface of an Opal')
+      a(href='/blog/2024/05/studio-roundup-may-2024.html')
+        h3 Studio Roundup for May 2024
+      p.
+        Opals. Game Dev. Marketing.
+      a(href='/blog/2024/04/studio-roundup-april-2024.html' target='_blank' title='Studio Roundup for April 2024')
+        img(src='/assets/blog/2024/04/emerald-pendant.jpg' style=' width: 100%; height: auto;' alt='A photo of necklace featuring an emerald pendant, set in 18k gold')
+      a(href='/blog/2024/04/studio-roundup-april-2024.html')
+        h3 Studio Roundup for April 2024
+      p.
+        One Of A Kind. Marketing Databases. Website Optimisation.
+      a(href='/blog/2024/03/studio-roundup-march-2024.html' target='_blank' title='Studio Roundup for March 2024')
+        img(src='/assets/blog/2024/03/1__M7aKKPzaeL1ubZgMFUeOg.webp' style=' width: 100%; height: auto;' alt='Can you tell which is the render and which is the original reference photo?')
+      a(href='/blog/2024/03/studio-roundup-march-2024.html')
+        h3 Studio Roundup for March 2024
+      p.
+        Realistic renders. DevOps tooling. Video ads.
+      a(href='/blog/2024/02/studio-roundup-february-2024.html' target='_blank' title='Studio Roundup for February 2024')
+        img(src='/assets/blog/2024/02/1_dyIbSVF7tlb9HYpBb4AkMQ.webp' style=' width: 100%; height: auto;' alt='18k white gold petals surrounding a blush pink spinel. Part of the Garrett Ray Blossoms collection.')
+      a(href='/blog/2024/02/studio-roundup-february-2024.html')
+        h3 Studio Roundup for February 2024
+      p.
+        Custom Analytics. Valentine's Day Gifts. Tech for Small business.
+      a(href='/blog.html' style='float: right' title="View blog") Read our blog
   noscript
     .row    
       .column-wide
