#31 - Adding Parvus and next set of services examples

--- a/src/styles/components/sliders.styl
+++ b/src/styles/components/sliders.styl
@@ -107,3 +107,19 @@
 	width: 100%;
 	height: 100%;
 }
+
+.parvus,
+.lightbox {
+  --parvus-background-color: #000000;
+  --parvus-btn-background-color: #ff69cb;
+}
+
+.content .feature .feature_media .keen-slider__slide img {
+  border-radius: 0.5rem;
+}
+
+.parvus__toolbar {
+  inset-block-start: 0.5rem;
+  inset-inline: 0.5rem;
+  justify-content: center;
+}
