--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -185,6 +185,19 @@ a.icon_button img:hover {
   width: 100%;
   height: 100%;
 }
+.parvus,
+.lightbox {
+  --parvus-background-color: #000;
+  --parvus-btn-background-color: #ff69cb;
+}
+.content .feature .feature_media .keen-slider__slide img {
+  border-radius: 0.5rem;
+}
+.parvus__toolbar {
+  inset-block-start: 0.5rem;
+  inset-inline: 0.5rem;
+  justify-content: center;
+}
 /* Sections */
 #page-wrapper {
   display: flex;
@@ -504,9 +517,6 @@ a.icon_button img:hover {
     margin: inherit;
     width: 100%;
     height: auto;
-  }
-  .content .feature.wide .feature_media img {
-    border-radius: 0rem;
   }
   .content .tiles .tile {
     flex-basis: calc(49% - 3rem);
