--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -62,14 +62,35 @@ h2 Services
         h3 Animation
         p
           | Transform your ideas into captivating visual stories. Whether it's a 2D or 3D animation, we bring concepts to life, adding movement and personality to your content. From product videos to character animations, we tailor our work to suit you.
-  .row.center
+  .row.center.hide-overflow
     .feature.wide
       .feature_content
         h3 3D Modelling and product renders
         p
           | Showcase your product in the best light with our modeling and product rendering services. Using custom 3D models and a meticulously configured rendering pipeline to get the perfect image. Whether it's a stylised look or realistic renders we ensure a visually appealing and accurate representation, perfect for marketing materials and presentations.
-      .feature_media
-        img(src='/assets/images/portfolio/open-studios-cottagecore-frog-lilypad.jpg' style=' width: 100%; height: 350px; object-fit: cover;' alt='Screenshot of a jewellery commercial for Garrett Ray Jewellery')
+      .feature_media#modelling
+        .keen-slider.main
+          .keen-slider__slide
+            a(href='/assets/images/services/3dmodelling4.png' class='lightbox')
+              img(src='/assets/images/services/3dmodelling4.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/3dmodelling2.jpg' class='lightbox')
+              img(src='/assets/images/services/3dmodelling2.jpg')
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="250" src="https://www.youtube.com/embed/s8cjViQmH8w?si=qYG4Oee_PGo4V2NB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          .keen-slider__slide
+            a(href='/assets/images/services/3dmodelling.png' class='lightbox')
+              img(src='/assets/images/services/3dmodelling.png')
+        .keen-slider.thumbnail
+          .keen-slider__slide
+            img(src='/assets/images/services/3dmodelling4.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/3dmodelling2.jpg')
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/s8cjViQmH8w/maxresdefault.jpg')
+          .keen-slider__slide
+            img(src='/assets/images/services/3dmodelling.png')
   .row.center
     .feature.wide
       .feature_media
@@ -278,6 +299,8 @@ h2 Services
           | We have a robust documentation system that ensures nothing is lost. Using Office and Dropbox our organized and structured files keep our production team equipped and informed for maximum efficiency to meet your goals.
 script.
   window.addEventListener("DOMContentLoaded", function() {
+    const prvs = new Parvus();
+
     function ThumbnailPlugin(main) {
       return (slider) => {
         function removeActive() {
