--- a/src/templates/header.pug
+++ b/src/templates/header.pug
@@ -7,9 +7,13 @@ link(rel='mask-icon' href='/assets/favicon/safari-pinned-tab.svg' color='#5bbad5
 meta(name='msapplication-TileColor' content='#da532c')
 meta(name='theme-color' content='#000000')
 
-//- Splide
+//- Keen Slider
 link(rel='stylesheet' href='/assets/css/keen-slider.min.css')
 script(async src='/assets/js/keen-slider.js')
+
+//- Parvus
+link(rel='stylesheet' href='/assets/css/parvus.min.css')
+script(src='/assets/js/parvus.min.js')
 
 //- CSS
 link(rel='stylesheet' href='/assets/css/1999.css')
