#31 - Adding additional tweaks and adjustments to services styles, adding newly compiled html pages, 3d web section of services page content

--- a/docs/assets/css/1999.css
+++ b/docs/assets/css/1999.css
@@ -115,44 +115,6 @@ a.icon_button img:hover {
 .contact_page .icon_button img {
   width: 1.5rem;
 }
-[class^="number-slide"],
-[class*=" number-slide"] {
-  background: #808080;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 50px;
-  color: #fff;
-  font-weight: 500;
-  height: 250px;
-  max-height: 100vh;
-  border-radius: 0.5rem;
-}
-.number-slide1 {
-  background: #40afff;
-  background: linear-gradient(128deg, #40afff 0%, #3f61ff 100%);
-}
-.number-slide2 {
-  background: #ff4b40;
-  background: linear-gradient(128deg, #ff9a3f 0%, #ff4b40 100%);
-}
-.number-slide3 {
-  background: #b6ff40;
-  background: linear-gradient(128deg, #b6ff40 0%, #3fff47 100%);
-  background: linear-gradient(128deg, #bdff53 0%, #2bfa52 100%);
-}
-.number-slide4 {
-  background: #40fff2;
-  background: linear-gradient(128deg, #40fff2 0%, #3fbcff 100%);
-}
-.number-slide5 {
-  background: #ff409c;
-  background: linear-gradient(128deg, #ff409c 0%, #ff3f3f 100%);
-}
-.number-slide6 {
-  background: #404cff;
-  background: linear-gradient(128deg, #404cff 0%, #ae3fff 100%);
-}
 .keen-slider.thumbnail {
   margin-top: 10px;
   padding: 1.5px;
@@ -192,6 +154,10 @@ a.icon_button img:hover {
 }
 .content .feature .feature_media .keen-slider__slide img {
   border-radius: 0.5rem;
+}
+.keen-slider.main .keen-slider__slide .lightbox img {
+  min-height: 209px;
+  max-height: 209px;
 }
 .parvus__toolbar {
   inset-block-start: 0.5rem;
@@ -485,6 +451,9 @@ a.icon_button img:hover {
 }
 .content .feature.wide .feature_media {
   max-width: calc(55% - 4rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 .content .feature.wide .feature_media img {
   width: 100%;
