--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -14,16 +14,16 @@ h2 Services
         .keen-slider.main
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/gYr3hbP24sQ?si=JAtRHgABN_YFkCrv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/gYr3hbP24sQ?si=JAtRHgABN_YFkCrv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/7Nf_XwEiF-A?si=D8FoNHvgafQRWvxj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/7Nf_XwEiF-A?si=D8FoNHvgafQRWvxj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/e3pw21RVHHM?si=-ivo81AVl1u5yKvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/e3pw21RVHHM?si=-ivo81AVl1u5yKvY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/MQnctnguZqk?si=ZFoEca8vz9wVq5nj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/MQnctnguZqk?si=ZFoEca8vz9wVq5nj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         .keen-slider.thumbnail
           .keen-slider__slide
             img(src="https://i3.ytimg.com/vi/gYr3hbP24sQ/maxresdefault.jpg")
@@ -39,16 +39,16 @@ h2 Services
         .keen-slider.main
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/VUzLwHIt_vM?si=fE9-tejOk9xSWaq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/VUzLwHIt_vM?si=fE9-tejOk9xSWaq2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/15C2EbSeVkA?si=bs9T-C8H9pypHpJz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/15C2EbSeVkA?si=bs9T-C8H9pypHpJz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/NbeGne8o3S4?si=tFxcewlt0lOhKLyv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/NbeGne8o3S4?si=tFxcewlt0lOhKLyv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/4QFwC1ASBC0?si=mHIlmhGdw4sTFPNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/4QFwC1ASBC0?si=mHIlmhGdw4sTFPNU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         .keen-slider.thumbnail
           .keen-slider__slide
             img(src='https://i3.ytimg.com/vi/VUzLwHIt_vM/maxresdefault.jpg')
@@ -78,7 +78,7 @@ h2 Services
               img(src='/assets/images/services/3dmodelling2.jpg')
           .keen-slider__slide
             .video-container
-              <iframe width="370" height="250" src="https://www.youtube.com/embed/s8cjViQmH8w?si=qYG4Oee_PGo4V2NB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/s8cjViQmH8w?si=qYG4Oee_PGo4V2NB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           .keen-slider__slide
             a(href='/assets/images/services/3dmodelling.png' class='lightbox')
               img(src='/assets/images/services/3dmodelling.png')
@@ -91,15 +91,36 @@ h2 Services
             img(src='https://i3.ytimg.com/vi/s8cjViQmH8w/maxresdefault.jpg')
           .keen-slider__slide
             img(src='/assets/images/services/3dmodelling.png')
-  .row.center
+  .row.center.hide-overflow
     .feature.wide
-      .feature_media
-        img(src='/assets/images/portfolio/open-studios-virtual-office.jpg' style=' width: 100%; height: 350px; object-fit: cover; object-position: 0 25%;' alt='Screenshot of the Open Studios 3D virtual office website experience')
+      .feature_media#immmersiveweb
+        .keen-slider.main
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/6XRsekvnsso?si=DXiEjqhS48J4MgdR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          .keen-slider__slide
+            a(href='/assets/images/services/3dweb2.png' class='lightbox')
+              img(src='/assets/images/services/3dweb2.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/3dweb3.png' class='lightbox')
+              img(src='/assets/images/services/3dweb3.png')
+          .keen-slider__slide
+            .video-container
+              <iframe width="370" height="209" src="https://www.youtube.com/embed/DR4FfUX6IuE?si=1XhJNqTjS7JSIhyO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>img(src='/assets/images/services/3dweb4.jpg')
+        .keen-slider.thumbnail
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/6XRsekvnsso/maxresdefault.jpg')
+          .keen-slider__slide
+            img(src='/assets/images/services/3dweb2.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/3dweb3.png')
+          .keen-slider__slide
+            img(src='https://i3.ytimg.com/vi/DR4FfUX6IuE/maxresdefault.jpg')
       .feature_content
         h3 3D Web Experiences
         p
           | Redefine online engagement with our 3D web experiences. We have extensive experience with WebGL/Three.JS, allowing us to create immersive online environments. In these digital worlds users interact with content in three dimensions. From virtual tours to interactive product displays, we can translate your vision into an experience that works on multiple platforms including older computers and mobile.
-  .row.center
+  .row.center.hide-overflow
     .feature.wide
       .feature_content
         h3 Full Stack Web Development
@@ -107,7 +128,7 @@ h2 Services
           | We can build static websites, eCommerce, CMS and cloud services using industry leading open source software. We handle everything from the user interface to the server-side logic, ensuring seamless functionality and a polished user experience. Our expertise spans front-end technologies, back-end development, and infrastructure, providing comprehensive solutions for your online presence.
       .feature_media
         img(src='/assets/images/cs2.jpg' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of the Garrett Ray Jewellery website, built with Shopify')
-  .row.center
+  .row.center.hide-overflow
     .feature.wide
       .feature_media
         img(src='/assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: 350px; object-fit: cover;' alt='Concept art for the Kamigen mobile game UI and gameplay')
