--- a/src/styles/sections/content.styl
+++ b/src/styles/sections/content.styl
@@ -221,6 +221,9 @@
 
 .content .feature.wide .feature_media
     max-width: calc(55% - 4rem);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 
     img
         width 100%
