#31 - Adding remaining services page content

--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -126,12 +126,54 @@ h2 Services
         h3 Full Stack Web Development
         p
           | We can build static websites, eCommerce, CMS and cloud services using industry leading open source software. We handle everything from the user interface to the server-side logic, ensuring seamless functionality and a polished user experience. Our expertise spans front-end technologies, back-end development, and infrastructure, providing comprehensive solutions for your online presence.
-      .feature_media
-        img(src='/assets/images/cs2.jpg' style=' width: 100%; height: 350px; object-fit: cover; object-position: top;' alt='Screenshot of the Garrett Ray Jewellery website, built with Shopify')
+      .feature_media#fullstack
+        .keen-slider.main
+          .keen-slider__slide
+            a(href='/assets/images/services/fullstack1.png' class='lightbox')
+              img(src='/assets/images/services/fullstack1.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/fullstack2.png' class='lightbox')
+              img(src='/assets/images/services/fullstack2.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/fullstack3.png' class='lightbox')
+              img(src='/assets/images/services/fullstack3.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/fullstack4.png' class='lightbox')
+              img(src='/assets/images/services/fullstack4.png')
+        .keen-slider.thumbnail
+          .keen-slider__slide
+            img(src='/assets/images/services/fullstack1.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/fullstack2.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/fullstack3.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/fullstack4.png')
   .row.center.hide-overflow
     .feature.wide
-      .feature_media
-        img(src='/assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: 350px; object-fit: cover;' alt='Concept art for the Kamigen mobile game UI and gameplay')
+      .feature_media#gamedev
+        .keen-slider.main
+          .keen-slider__slide
+            a(href='/assets/images/services/gamedev.png' class='lightbox')
+              img(src='/assets/images/services/gamedev.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/gamedev2.png' class='lightbox')
+              img(src='/assets/images/services/gamedev2.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/gamedev3.png' class='lightbox')
+              img(src='/assets/images/services/gamedev3.png')
+          .keen-slider__slide
+            a(href='/assets/images/services/gamedev4.png' class='lightbox')
+              img(src='/assets/images/services/gamedev4.png')
+        .keen-slider.thumbnail
+          .keen-slider__slide
+            img(src='/assets/images/services/gamedev.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/gamedev2.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/gamedev3.png')
+          .keen-slider__slide
+            img(src='/assets/images/services/gamedev4.png')
       .feature_content
         h3 Game development
         p
